--- a/aboutme.html
+++ b/aboutme.html
@@ -20,18 +20,19 @@
 
 <main>
     <div class="navbar">
-        <a href="index.html" class="active">Home</a>
-        <a href="aboutme.html">About Me</a>
+        <a href="index.html">Home</a>
+        <a href="aboutme.html"class="active">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="contactinfo.html">Contact Info</a>
+        
       </div>
-    <h2>
-        <p>
 
-        </p>
-    </h2>
+      <a target="_blank" href="Linda.jpg">
+      <img src="Linda.jpg" class="center" width="150" height="175">
+    </a>
 
-    
-</main>   
+    <h2>About Linda</h2>
+    <p>I'm a new developer coding in HTML, CSS & JavaScript.</p>
+
 </body>
 </html>
