--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linda Martinez Portfolio</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300;700&display=swap" rel="stylesheet">
@@ -20,18 +20,13 @@
 
 <main>
     <div class="navbar">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutme.html">About Me</a>
-        <a href="projects.html">Projects</a>
+        <a href="projects.html" class="active">Projects</a>
         <a href="contactinfo.html">Contact Info</a>
       </div>
-    <h2>
-        <p>
-
-        </p>
-    </h2>
-
-    
+      <h2>Projects</h2>
+      <a class="social-link" href="https://github.com/lindamart"><img src="linkedin.jpg"></a>
 </main>   
 </body>
 </html>
