--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 
       <div class="intro-pic">
 
-        <a target="_blank" href="Linda.jpg"><img src="Linda.jpg" alt="Linda Martinez" class="center" width="150"height="175"></a>
+        <a target="_blank" href="assets/images/Linda.jpg"><img src="assets/images/Linda.jpg" alt="Linda Martinez" class="center" width="150"
+            height="175"></a>
 
       </div>
 
@@ -82,9 +83,11 @@
             </h3>
             <div class="card-body">
 
-              <a href="https://lindamart.github.io/Interactive_FrontEnd_HeroApp/"><img class="thumbnail" alt="HTML Refacotring" src="heroGen.jpg" width="200" height="300"></a>
+              <a href="https://lindamart.github.io/Interactive_FrontEnd_HeroApp/"><img class="thumbnail"
+                  alt="HTML Refacotring" src="assets/images/heroGen.jpg" width="200" height="300"></a>
 
-              <a href="https://github.com/lindamart/Interactive_FrontEnd_HeroApp" class="btn btn-block btn-info font-weight-bold"role="button">Code</a>
+              <a href="https://github.com/lindamart/Interactive_FrontEnd_HeroApp"
+                class="btn btn-block btn-info font-weight-bold" role="button">Code</a>
 
             </div>
           </div>
@@ -98,9 +101,11 @@
             </h3>
             <div class="card-body">
 
-              <a href="https://lindamart.github.io/web-api-code-quiz/"><img class="thumbnail" alt="Landing Page" src="apiQuiz.jpg" width="200" height="300"></a>
+              <a href="https://lindamart.github.io/web-api-code-quiz/"><img class="thumbnail" alt="Landing Page"
+                  src="assets/images/apiQuiz.jpg" width="200" height="300"></a>
 
-              <a href="https://github.com/lindamart/web-api-code-quiz" class="btn btn-block btn-info font-weight-bold"role="button">Code</a>
+              <a href="https://github.com/lindamart/web-api-code-quiz" class="btn btn-block btn-info font-weight-bold"
+                role="button">Code</a>
             </div>
           </div>
         </div>
@@ -112,11 +117,54 @@
           <div class="card">
             <h3 class="card-header text-dark">Work Day Scheduler</h3>
             <div class="card-body">
-              <a href="https://lindamart.github.io/third_party_api_workdayscheduler/"><img class="thumbnail"alt="HTML Refacotring" src="workDaySched.jpg" width="200" height="300"></a>
-              <a href="https://github.com/lindamart/third_party_api_workdayscheduler" class="btn btn-block btn-info font-weight-bold"role="button">Code</a>
+              <a href="https://lindamart.github.io/third_party_api_workdayscheduler/"><img class="thumbnail"
+                  alt="HTML Refacotring" src="assets/images/workDaySched.jpg" width="200" height="300"></a>
+              <a href="https://github.com/lindamart/third_party_api_workdayscheduler"
+                class="btn btn-block btn-info font-weight-bold" role="button">Code</a>
             </div>
           </div>
         </div>
+
+        <div class="container p-3 my-3 text-white">
+          <!-- <div class="col-12 col-md-6 mb-3"> -->
+
+          <div class="card">
+
+            <h3 class="card-header text-dark">
+              The Daily Beat
+            </h3>
+            <div class="card-body">
+
+              <a href="https://sleepy-scrubland-38633.happ.com/signuperoku"><img class="thumbnail"
+                  alt="HTML Refacotring" src="assets/images/dblogin.jpg" width="200" height="300"></a>
+
+              <a href="https://github.com/ChristianAnti/TheDailyBeat"
+                class="btn btn-block btn-info font-weight-bold" role="button">Code</a>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="container p-3 my-3 text-white">
+          <!-- <div class="col-12 col-md-6 mb-3"> -->
+
+          <div class="card">
+
+            <h3 class="card-header text-dark">
+              Tech Blog
+            </h3>
+            <div class="card-body">
+
+              <a href="https://tech-blog-lmart.herokuapp.com/"><img class="thumbnail"
+                  alt="HTML Refacotring" src="assets/images/heroGen.jpg" width="200" height="300"></a>
+
+              <a href="https://github.com/lindamart/tech-blog"
+                class="btn btn-block btn-info font-weight-bold" role="button">Code</a>
+
+            </div>
+          </div>
+        </div>
+
       </section>
 
     </section>
@@ -132,7 +180,8 @@
       <h4>Contact Me</h4>
 
 
-      <a href="https://www.linkedin.com/sharing/share-offsite/?url=www.linkedin.com/in/linda-m-319246217" class="btn  btn-info" role="button">Linkedin</a>
+      <a href="https://www.linkedin.com/sharing/share-offsite/?url=www.linkedin.com/in/linda-m-319246217"
+        class="btn  btn-info" role="button">Linkedin</a>
       <a href="mailto:lindanmjw@gmail.com?" class="btn  btn-info" role="button">My Email</a>
       <a href="lindaResume.pdf" class="btn  btn-info" role="button">My Resume</a>
 
@@ -140,4 +189,5 @@
 
 
 </body>
+
 </html>
