updated final images and links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="card-body">
 
               <a href="https://tech-blog-lmart.herokuapp.com/"><img class="thumbnail"
-                  alt="HTML Refacotring" src="assets/images/heroGen.jpg" width="200" height="300"></a>
+                  alt="HTML Refacotring" src="assets/images/blog.jpg" width="200" height="300"></a>
 
               <a href="https://github.com/lindamart/tech-blog"
                 class="btn btn-block btn-info font-weight-bold" role="button">Code</a>
